force-app/main/default/objects/Contact/fields/Contactability_Status__c.field-meta.xml
<CustomField>
    <fullName>Contactability_Status__c</fullName>
    <formula>IF(AND(HasOptedOutOfEmail,HasOptedOutOfPhone__c),&quot;Do not contact&quot;,
   IF(AND(ISBLANK(Email),ISBLANK(Phone)), &quot;Missing contact details&quot;,
     &quot;OK to contact&quot;
     )
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contactability Status</label>
    <type>Text</type>
</CustomField>