force-app/main/default/objects/Contact/fields/Normalised_Phone__c.field-meta.xml
<CustomField>
    <fullName>Normalised_Phone__c</fullName>
    <formula>SUBSTITUTE(
 SUBSTITUTE(
  SUBSTITUTE(
   SUBSTITUTE(
    SUBSTITUTE(Phone, &quot; &quot;, &quot;&quot;),
   &quot;-&quot;, &quot;&quot;),
  &quot;(&quot;, &quot;&quot;),
 &quot;)&quot;, &quot;&quot;),
&quot;.&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Normalised Phone</label>
    <type>Text</type>
</CustomField>